fixed some spacing issues on homepage

--- a/css/index.css
+++ b/css/index.css
@@ -14,19 +14,22 @@ body {
     text-align: center;
 }
 
-.item {
-    border: 1px solid black;
-    display: inline-block;
-    padding: 20px 10px;
-    text-align: center;
-    transition-duration: .3s;
+.item-container {
+    margin: 100px auto;
+    width: 60vw;
+    display: flex;
+    justify-content: space-between;
 }
 
-.item:hover {
-    background-color: white;
-    cursor: pointer;
-    transition-duration: .3s;
+.item-name {
+    float: left;
+    width: 25%;
+    border: 1px solid black;
+    padding: 20px 10px;
+    text-align: center;
 }
+
 .item-subtitle {
     color: red;
 }
+
